# GlassBox

./: .dockerignore  .gitignore  Dockerfile  README.md  autofit.py  autofit_nemoclaw.md  dockerization_details.md  integrity_test.py  policy.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_imports.py  tmp.py
.github/workflows/: ci-pipeline.yml
agent/: glassbox_tool.py  run_agent.py
benchmark_outputs/: bench_report.md  bench_results.csv
deployment/: docker-compose.yml
deployment/fastapi/: main.py  requirements.txt
docs/: packaging-architecture.md
eda/: plotter.py  profiler.py  stats.py
eda/docs/: README.md  UML_Class_Diagram.md
eda/tests/: test_eda.py
numpandas/: __init__.py
numpandas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
numpandas/core/: series.py
numpandas/io/: csv.py  excel.py
numpandas/ml/: __init__.py  linear_model.py  utils.py
numpandas/tests/: main_test.ipynb  ml_test.py  stress_cli.py  tmp.py
numpandas/utils/: __init__.py
preprocessing/: __init__.py  base.py  compose.py  encode.py  exceptions.py  impute.py  scale.py  transform.py
preprocessing/docs/: README.md  UML_Class_Diagram.md
preprocessing/tests/: test_preprocessing.py
results/: best_model.pkl
scripts/: screenshot4_eda_plot.py
test_data/: test_model.csv
