[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpandas"
version = "0.1.0"
description = "Minimal pandas-like API built on NumPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GlassBox" }]
dependencies = [
  "numpy>=1.23",
  "openpyxl>=3.1",
]

[tool.setuptools]
packages = ["numpandas", "numpandas.core", "numpandas.io", "numpandas.utils"]
